--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
 spring.datasource.username=bookadmin
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://127.0.0.1/bookdb
+spring.jpa.hibernate.ddl-auto=validate
+spring.sql.init.mode=always
